--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Ammar Hasan</title>
-  </head>
-  <body>
-    Ammar Hasan Profile
-  </body>
-</html>
+---
+layout: resume
+---
